BRN: Start work on 0.4.3.  Updated Docs

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,5 @@
-name: Test
+# .github/workflows/tests.yaml
+name: Tests
 on: [push]
 jobs:
   test:
@@ -6,6 +7,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
